<resources>
    <string name="app_name">Project Nasa</string>
    <string name="authors_1">David Ghiassi</string>
    <string name="authors_2">Remy Dao</string>
    <string name="authors_3">Xavier Facqueur</string>
    <string name="authors_4">Alexandre Vermeulen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home">Home</string>
    <string name="apod">Apod</string>
    <string name="eonet">EONET</string>
    <string name="mars_rover">Mars Rover</string>
    <string name="search_rover">Search</string>
    <string name="select_rover">Select the rover and its camera</string>
    <string name="background_label">Background space</string>
    <string name="day_picture">Picture of the day</string>
    <string name="apod_week_picture">Week picture</string>
    <string name="last_seven_days_pics">Last seven days pictures</string>

</resources>