<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/background_label"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/space_wallpaper" />

    <TextView
        android:id="@+id/main_activity_textview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_activity_textview_author1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/authors_1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_textview_author2" />

    <TextView
        android:id="@+id/main_activity_textview_author2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authors_2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/main_activity_textview_author1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_textview_author3" />

    <TextView
        android:id="@+id/main_activity_textview_author3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authors_3"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/main_activity_textview_author2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_textview_author4" />

    <TextView
        android:id="@+id/main_activity_textview_author4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authors_4"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/main_activity_textview_author3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rover_button" />

    <ImageButton
        android:id="@+id/apod_button"
        android:layout_width="210dp"
        android:layout_height="210dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/apod"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/eonet_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_textview_title"
        app:srcCompat="@drawable/apod_btn_image" />

    <ImageButton
        android:id="@+id/rover_button"
        android:layout_width="420dp"
        android:layout_height="210dp"
        android:contentDescription="@string/mars_rover"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apod_button"
        app:srcCompat="@drawable/mars_rover_btn_image" />

    <ImageButton
        android:id="@+id/eonet_button"
        android:layout_width="210dp"
        android:layout_height="210dp"
        android:contentDescription="@string/eonet"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/apod_button"
        app:layout_constraintTop_toTopOf="@+id/apod_button"
        app:srcCompat="@drawable/eonet_btn_image" />


</androidx.constraintlayout.widget.ConstraintLayout>